# spatiotemporal_panel_model

./: README.md  pyproject.toml  requirements.txt
examples/: gdp_distance_example.py  moran_example.py
gstw_pdm/: __init__.py  cf_gmm.py  cf_qmle.py  first_stage.py  inference.py  utils.py  variance_correction.py
mc_results/: table1.npz  table2.npz  table3.npz  table4.npz  table5.npz  table6.npz  table7.npz
paper_replication/: empirical_application.py  monte_carlo.py  run_all_tables.py
paper_replication/mc_results/: table1.npz  table2.npz  table3.npz  table4.npz  table5.npz  table6.npz  table7.npz
spatiotemporal_cf/: __init__.py  cf_2sls.py  cf_gmm.py  cf_qmle.py  control_function.py  utils.py
spatiotemporal_cf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spatiotemporal_panel_model/: __init__.py  first_stage.py  inference.py  utils.py  variance_correction.py  weight_construction.py
tests/: test_estimators.py
