[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatiotemporal-cf"
version = "0.1.0"
description = "Control-Function estimators for Spatial Durbin Models with endogenous Spatio-Temporal Weight Matrices"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "matplotlib", "tqdm"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spatiotemporal_panel_model*"]
